--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <title>Princess Ollie's Animal Game</title>
   </head>
   <body>
-    <div id="app"></div>  
+    <div id="root"></div>  
+    <script src='bundle.js'></script> 
   </body>
 </html>
