--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Princess Ollie's Animal Game</title>
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <link href='styles.css' rel='stylesheet'>
   </head>
   <body>
     <div id="root"></div>  
