--- a/assets/public/index.html
+++ b/assets/public/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello React</title>
+        <title>The Animal Game</title>
     </head>
     <body>
         <div id="root"></div>
